MND-144 fixed styles on IE-11

--- a/src/assets/styles/_content-home.scss
+++ b/src/assets/styles/_content-home.scss
@@ -57,8 +57,7 @@
     z-index: -2;
   }
   video[poster] {
-    width: 100%;
-    height: 100%;
+    min-height: 100%;
     object-fit: cover;
     top:0 !important;
     left:0 !important;
@@ -99,13 +98,14 @@
   }
   &-slack {
     width: 750px;
-    min-height: 555px;
     display: flex;
+    align-items: stretch;
     margin-top: 180px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     z-index: 2;
     &_sidebar {
       width: 155px;
+      min-width: 155px;
       min-height: 100%;
       background-color: #573E4D;
       display: flex;
@@ -222,7 +222,7 @@
       width: 100%;
       height: 100%;
       background-color: #fff;
-      padding-bottom: 15px;
+      padding-bottom: 50px;
       box-sizing: border-box;
       &-title {
         height: 70px;
@@ -533,6 +533,7 @@
         justify-content: space-between;
       }
       &-item {
+        width: 100%;
         margin-top: 65px;
         h3 {
           margin-bottom: 16px;
@@ -675,6 +676,7 @@
   &-wrap {
     display: flex;
     flex-direction: row;
+    align-items: stretch;
     justify-content: space-between;
     margin-top: 60px;
 
@@ -808,6 +810,7 @@
             margin: 40px 0 60px;
           }
           .projects-desc_wrap {
+            width: 100%;
             min-height: 130px;
             h4 {
               font-size: 24px;
@@ -897,21 +900,19 @@
       overflow: hidden;
       height: auto;
       transition: all .4s;
-      .golang-img {
-        height: 55px;
-      }
       &-item {
         width: 16%;
         min-width: 140px;
+        height: 43px;
         text-align: center;
         margin: 30px 0;
         display: flex;
         align-items: center;
         justify-content: center;
         img {
-          max-width: 100%;
+          width: 100%;
           height: 100%;
-          object-fit: contain;
+          display: block;
         }
         @media screen and (max-width: 820px) and (min-width: 540px) {
           display: none;
@@ -931,6 +932,12 @@
           &:nth-child(-n+6) {
             display: block;
           }
+        }
+      }
+      .golang-img {
+        height: 55px;
+        img {
+          width: auto;
         }
       }
     }
@@ -1164,7 +1171,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: stretch;
     margin-top: 60px;
     &_item {
       width: 49%;
@@ -1256,7 +1263,8 @@
       right: 0;
       bottom: 0;
       backface-visibility: hidden;
-      -webkit-backface-visibility: hidden; 
+      -moz-backface-visibility: hidden;
+      -ms-backface-visibility: hidden;
       transform: rotateY(180deg);
       background-image: url('../../assets/img/jpg/contacts/eeeeerock.jpg');
       background-size: 99%;
@@ -1273,6 +1281,8 @@
       align-items: center;
       margin-top: 30px;
       backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      -ms-backface-visibility: hidden;
       -webkit-backface-visibility: hidden;
       &-item {
         p {
