--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -10,6 +10,7 @@
   }
   &-logo {
     width: 40px;
+    height: 70px;
   }
   .mobile-menu_btn {
     background-color: transparent;
